feat: implement voucher list and detail and enhance api service
